--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,14 @@
 }
 
 body {
-    height: 100vh;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 body section {
-    height: 100%;
+    min-height: 100vh;
 }
 
 small {
@@ -31,6 +34,10 @@ small {
 
     }
 
+    #dateTime {
+        font-size: 10px;
+    }
+
 }
 
 #AddProduct_btn {
@@ -38,5 +45,9 @@ small {
 }
 
 #AddProduct_btn:hover {
-    box-shadow: 0 0 20px  rgb(90, 243, 90);
+    box-shadow: 0 0 20px rgb(90, 243, 90);
+}
+
+#dateTime {
+    font-size: 12px;
 }
